[package]
name = "randrw-s3-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bincode = { version = "2.0.0-rc.3" }
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["stream", "json"] }
tokio-util = { version = "0.7" }
mimalloc = { version = "*", default-features = false }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", default-features = false }
aws-types = { version = "1" }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-smithy-runtime = { version = "1" }
futures-util = "0.3"
multipart = { git = "https://github.com/bitrainforest/multipart.git", default-features = false, features = ["server"] }
sscanf = "0.4"
log4rs = "1"
rand = "0.8"
rust-lapper = { version = "*" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8"
futures-util = "0.3"